# papertalk

./: .gitignore  pyproject.toml  requirements.txt
src/papertalk/: example.ipynb  paper_parser.py  rag.py  semantic_scholar.py
